[gd_scene load_steps=4 format=2]

[ext_resource path="res://Content/Circle.png" type="Texture" id=1]
[ext_resource path="res://Bullet/Bullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 240.0

[node name="Bullet" type="Area2D"]
z_index = 3
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.52549 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Sprite"]
self_modulate = Color( 1, 0, 0, 1 )
show_behind_parent = true
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -300, -300, 600, 600 )

[node name="Timer" type="Timer" parent="."]
wait_time = 40.0
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
